2022-11-28T16:24:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3566676505 # 655
* notice: last 14d: unq all: 3 25
* notice: prev accum: outdated-unq outdated-all / unq all: 398 630 / 413 656
* notice: next accum: outdated-unq outdated-all / unq all: 400 632 / 414 657
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-14] / []

2022-11-28T01:45:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3560980127 # 653
* notice: last 14d: unq all: 3 26
* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 414 657
* notice: next accum: outdated-unq outdated-all / unq all: 398 630 / 413 656
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [2022-11-13] / [2022-11-14]

2022-11-27T01:51:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3556251578 # 650
* notice: last 14d: unq all: 4 28
* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 414 656
* notice: next accum: outdated-unq outdated-all / unq all: 397 629 / 414 657
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-26]

2022-11-26T08:24:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3552930840 # 648
* notice: last 14d: unq all: 4 27
* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 413 655
* notice: next accum: outdated-unq outdated-all / unq all: 397 629 / 414 656
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-26]

2022-11-26T01:42:14Z: