@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-28T16:24:00Z",
+  "timestamp" : "2022-11-29T08:26:34Z",
   "count_outdated" : 632,
   "uniques_outdated" : 400,
-  "count" : 657,
+  "count" : 656,
   "uniques" : 414,
   "clones" : [
     {
       "timestamp": "2022-11-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
